[#909] fixed header nav covering the top of pages

--- a/akvo/rsr/static/rsr/v3/css/src/main.scss
+++ b/akvo/rsr/static/rsr/v3/css/src/main.scss
@@ -11,7 +11,7 @@ body {
     line-height: 1.42857;
     text-rendering: optimizelegibility;
     font-family: $bodyFont;
-    padding-top:100px;
+    padding-top:80px;
 }
 
 h1,
